fixed submit buttom spacing

--- a/style.css
+++ b/style.css
@@ -98,7 +98,7 @@ nav {
   font-size: 15px;
 }
  .pricinglist {
-  
+
    margin-left: 50px;
  }
  .amenetiesSlide {
@@ -259,6 +259,8 @@ input[type=submit] {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+    margin-bottom: 30px; /*fixed error with running into next div*/
+
 }
 
 /* When moving the mouse over the submit button, add a grey color */
